--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ cifar-10-batches-py/readme.html
 cifar-10-batches-py/test_batch
 
 cifar-100-python.tar.gz
+table.tex
+cifar-100-python/file.txt~
+cifar-100-python/meta
+cifar-100-python/test
+cifar-100-python/train
