adding grad clip and bash for pass

--- a/.gitignore
+++ b/.gitignore
@@ -12,21 +12,24 @@ networks/__pycache__
 clip/__pycache__
 __pycache__/
 __pycache__/*
-pycache
-clip/__pycache__/__init__.cpython-38.pyc
-clip/__pycache__/clip.cpython-38.pyc
-BUILDv2/cifar-100-python.tar.gz
-cifar-10-batches-py/data_batch_1
-cifar-10-batches-py/data_batch_2
-cifar-10-batches-py/data_batch_3
-cifar-10-batches-py/data_batch_4
-cifar-10-batches-py/data_batch_5
-cifar-10-batches-py/readme.html
-cifar-10-batches-py/test_batch
+/pycache/
+/clip/__pycache__/*
+# clip/__pycache__/__init__.cpython-38.pyc
+# clip/__pycache__/clip.cpython-38.pyc
+# BUILDv2/cifar-100-python.tar.gz
+# cifar-10-batches-py/data_batch_1
+# cifar-10-batches-py/data_batch_2
+# cifar-10-batches-py/data_batch_3
+# cifar-10-batches-py/data_batch_4
+# cifar-10-batches-py/data_batch_5
+# cifar-10-batches-py/readme.html
+# cifar-10-batches-py/test_batch
 
-cifar-100-python.tar.gz
-table.tex
-cifar-100-python/file.txt~
-cifar-100-python/meta
-cifar-100-python/test
-cifar-100-python/train
+cifar-10*
+cifar-100*
+# cifar-100-python.tar.gz
+# table.tex
+# cifar-100-python/file.txt~
+# cifar-100-python/meta
+# cifar-100-python/test
+# cifar-100-python/train
